# debcontrol_struct

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
debcontrol_struct/: Cargo.toml
debcontrol_struct/examples/copyright/: copyright  main.rs
debcontrol_struct/src/: lib.rs
debcontrol_struct_derive/: .gitignore  Cargo.toml
debcontrol_struct_derive/src/: lib.rs
