[package]
name = "debcontrol_struct"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debcontrol = "0.1.1"
debcontrol_struct_derive = { version = "0.1.0", optional = true, path = "../debcontrol_struct_derive" }

[dev-dependencies]
debcontrol_struct_derive = { version = "0.1.0", path = "../debcontrol_struct_derive" }

[features]
default = ["derive"]
derive = ["debcontrol_struct_derive"]
