[package]
name = "debcontrol_struct"
version = "0.3.0"
authors = ["Romain Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Automatic Debian control file parsing for structs."
readme = "README.md"
keywords = ["deb", "debian", "control", "dpkg"]
categories = ["parser-implementations"]
repository = "https://github.com/MicroJoe/debcontrol_struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
debcontrol = "0.1.1"
debcontrol_struct_derive = { version = "0.3.0", optional = true, path = "../debcontrol_struct_derive" }

[dev-dependencies]
debcontrol_struct_derive = { version = "0.3.0", path = "../debcontrol_struct_derive" }

[features]
default = ["derive"]
derive = ["debcontrol_struct_derive"]
