[package]
name = "debcontrol_struct_derive"
version = "0.3.1"
authors = ["Romain Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Automatic Debian control file parsing for structs (proc macro)."
readme = "README.md"
keywords = ["deb", "debian", "control", "dpkg"]
categories = ["parser-implementations"]
repository = "https://github.com/MicroJoe/debcontrol_struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
